fiz um estilo mais ou menos mas segue o baile

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,31 +1,16 @@
-<html>
 
-    <head>
+{% extends 'blog/base.html' %}
 
-        <title>Django Girls blog</title>
+{% block content %}
 
-    </head>
+            {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        <p>published: {{ post.published_date }}</p>
+                    </div>
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaksbr }}</p>
+                </div>
+            {% endfor %}
 
-    <body>
-
-        <div>
-
-    <h1><a href="/">Django Girls Blog</a></h1>
-
-        </div>
-
-{% for post in posts %}
-
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-
-    </div>
-    
-{% endfor %}
-
-
-    </body>
-
-</html>
+{% endblock %}
